--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - amazonka
+- amazonka-s3
+- amazonka-secretsmanager
 
 ghc-options:
 - -Wall
