--- a/test-amazonka.cabal
+++ b/test-amazonka.cabal
@@ -33,6 +33,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       amazonka
+    , amazonka-s3
+    , amazonka-secretsmanager
     , base >=4.7 && <5
   default-language: Haskell2010
 
@@ -45,6 +47,8 @@ executable test-amazonka-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       amazonka
+    , amazonka-s3
+    , amazonka-secretsmanager
     , base >=4.7 && <5
     , test-amazonka
   default-language: Haskell2010
@@ -59,6 +63,8 @@ test-suite test-amazonka-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       amazonka
+    , amazonka-s3
+    , amazonka-secretsmanager
     , base >=4.7 && <5
     , test-amazonka
   default-language: Haskell2010
